# backend/HamzaTex.Api/Validation/ProductValidation.cs
@@ -23,11 +23,9 @@ public sealed class ProductCreateViewModelValidation : AbstractValidator<Product
             .WithMessage("SKU is required")
             .MaximumLength(255)
             .WithMessage("SKU is SKU must be less than 255 characters");
-        RuleFor(x => x.Unit)
-            .NotEmpty()
-            .WithMessage("Unit is required")
-            .MaximumLength(255)
-            .WithMessage("Unit is Unit must be less than 255 characters");
+        RuleFor(x => x.UnitId)
+            .GreaterThan(0)
+            .WithMessage("Unit is required");
         RuleFor(x => x.DefaultCost)
             .NotEmpty()
             .WithMessage("Default cost is required")
@@ -60,11 +58,9 @@ public sealed class ProductUpdateViewModelValidation : AbstractValidator<Product
             .WithMessage("SKU is required")
             .MaximumLength(255)
             .WithMessage("SKU is SKU must be less than 255 characters");
-        RuleFor(x => x.Unit)
-            .NotEmpty()
-            .WithMessage("Unit is required")
-            .MaximumLength(255)
-            .WithMessage("Unit is Unit must be less than 255 characters");
+        RuleFor(x => x.UnitId)
+            .GreaterThan(0)
+            .WithMessage("Unit is required");
         RuleFor(x => x.DefaultCost)
             .NotEmpty()
             .WithMessage("Default cost is required")
@@ -80,6 +76,5 @@ public sealed class ProductUpdateViewModelValidation : AbstractValidator<Product
             .WithMessage("Reorder level is required")
             .GreaterThan(0)
             .WithMessage("Reorder level must be greater than 0");
-        
     }
 }
